--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
 	<div class="container">
 		<h2 id="head">To-Do List</h2>
+		<p id="date"></p>
 		
 		<div class="input-group">
   			<input id="input" type="text" class="form-control" placeholder="Add Items">
