every deleted item is stored

--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
 		
 		<div class="list">
 			<ul>
-			<li>Notepad</li>
+			<!-- <li>Notepad</li>
 			<li>Signature Pen</li>
 			<li>Marker</li>
-			<li>White Board</li>
+			<li>White Board</li> -->
+
 			</ul>
 		</div>
 	
 	</div>
+	
 	
 
 	<script type="text/javascript" src="script.js"></script>
