--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="container">
 		<h2 id="head">To-Do List</h2>
-		<p id="date"></p>
+		<p class="date"></p>
 		
 		<div class="input-group">
   			<input id="input" type="text" class="form-control" placeholder="Add Items">
@@ -27,6 +27,7 @@
 
 		
 		<div class="list">
+			<h2 class="date"></h2>
 			<ul>
 			<!-- <li>Notepad</li>
 			<li>Signature Pen</li>
